# F1-Telemetry-Simulation-System

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  alerts.py  analytics.py  exports.py  replay.py  (+2 more)
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: alerts.py  analytics.py  replay.py  session.py  telemetry.py
backend/app/tests/: conftest.py  test_alerts.py  test_analytics.py  test_replay_exports.py  test_session_api.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AlertsPanel.tsx  HeroVisual.tsx  LapComparisonCard.tsx  MetricCard.tsx  ReplayControls.tsx  SessionList.tsx  SignalChart.tsx  TrackMap.tsx
frontend/src/hooks/: usePolling.ts
frontend/src/pages/: DashboardPage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: global.css
frontend/src/types/: api.ts
frontend/src/utils/: circuits.ts  formatters.ts
sample_data/: seed_2026_calendar.py
sample_data/demo_sessions/: README.md  demo_session.csv
simulator/: CMakeLists.txt  Dockerfile
simulator/config/: default.ini  docker.ini
simulator/include/: car_simulator.hpp  replay_engine.hpp  telemetry_generator.hpp  track_model.hpp  types.hpp  utils.hpp
simulator/src/: car_simulator.cpp  main.cpp  replay_engine.cpp  telemetry_generator.cpp  track_model.cpp  utils.cpp
simulator/tests/: simulator_tests.cpp
(+5 files in other folders)
